styles.css
* {
  box-sizing: border-box;
  margin: 0px;
  font-family: Arial, Helvetica, sans-serif;
  padding: 0:
}

.hide {
    display: none;
  }
  
.header {
    overflow: hidden;
    position: sticky;
    top: 0;
    width: 100%;
    height: 60px;
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    align-items: center;
    justify-items: center;
    background-color: grey;
    margin-bottom: 1rem;
  }
  
.title {
    margin: 0;
    grid-column: 2;
    display: flex;
    justify-content: center;
    align-self: center;
    }
  
  .search {
    grid-column: 3;
    margin: .5rem;
    border-radius: 5px;
    }
  .searchbox {
    width: 220px;
    height: 30px;
    margin-left: .5rem;
    border: 1px solid black;
    box-shadow: 2px 1px black;
    border-radius: 5px;    
  }
.company__search {
  height: 35px;
}
  
  .empty {
    visibility: none;
    grid-column: 1;
  }

  a {
    display: contents;
    text-decoration: none;
    width: 100%;
  }

  .company {
    display: flex;
    height: 2.5rem;
    width: auto;
    border: 1px solid black;
    border-radius: 5px;
    background-color: azure;
    cursor: pointer;
    justify-content: space-between;
    align-items: center;
    box-shadow:
      0 2.8px 2.2px rgba(0, 0, 0, 0.034),
      0 6.7px 5.3px rgba(0, 0, 0, 0.048),
      0 12.5px 10px rgba(0, 0, 0, 0.06),
      0 22.3px 17.9px rgba(0, 0, 0, 0.072),
      0 41.8px 33.4px rgba(0, 0, 0, 0.086),
      0 100px 80px rgba(0, 0, 0, 0.12)
  ;
  }

  .container {
    display:flex;
    background-color: aqua;
  }

  .container__sidebar {
    /* position: absolute; */
    /* display: flex; */
    width:300px;
    height: 800px;
    background-color: gainsboro;
    border-radius: 10px;
    border: 2px solid black;
    padding: 1rem;
    overflow: hidden;
    margin-left: 5px;
  }

  .container__main {
    flex: 1;
  }
  
  .grid-container {
    /* flex: 1; */
    display: grid;
    height: 800px;
    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
    justify-items: center;
    gap: 1rem;
    overflow: auto;
  }
  .box {
    border-radius: .5em;
    width: 250px;
    padding: 3rem;  
    text-align: center;
    font-size: 1.2rem;
    box-shadow: 1em;
    background: rgb(76,149,236);
    background: linear-gradient(45deg, rgba(76,149,236,1) 0%, rgba(178,178,225,1) 0%, rgba(117,209,228,1) 100%);
  }
  .green {
    background-color: green;
  }
  .blue {
    background-color: blue;
  }
  .orange { background-color: orangered; }
  .red { background-color: red; }
  .violet {background-color: violet; }
  .salmon {background-color: salmon; }

